updated ep002, added ep003

--- a/_posts/2019-01-29-ep002.md
+++ b/_posts/2019-01-29-ep002.md
@@ -1,5 +1,5 @@
 ---
-title:        "Our first episode!"
+title:        "Sh*% got real"
 date:         2019-01-29 22:00:00 -0500
 keywords:
 - family
@@ -10,4 +10,5 @@ block:        "no" # no means it is published
 layout: podcast
 excerpt_separator: <!--more-->
 ---
-Sh*% got real Things get serious in episode 2. Amy discusses the WSU strike, we go over some parenting triumphs and fails, and the kids do impressions of movie characters.
+Things get serious in episode 2. Amy discusses the WSU strike, we go over some parenting triumphs and fails, and the kids do impressions of movie characters.
+<!--more-->
