--- a/_posts/2019-01-29-ep002.md
+++ b/_posts/2019-01-29-ep002.md
@@ -12,3 +12,5 @@ excerpt_separator: <!--more-->
 ---
 Things get serious in episode 2. Amy discusses the WSU strike, we go over some parenting triumphs and fails, and the kids do impressions of movie characters.
 <!--more-->
+
+More details of your episode here.
