added episode number to title

--- a/_posts/2019-01-29-ep002.md
+++ b/_posts/2019-01-29-ep002.md
@@ -1,5 +1,5 @@
 ---
-title:        "Sh*% got real"
+title:        "ep002: Sh*% got real"
 date:         2019-01-29 22:00:00 -0500
 keywords:
 - family
