--- a/_posts/2019-02-06-ep003.md
+++ b/_posts/2019-02-06-ep003.md
@@ -1,5 +1,5 @@
 ---
-title:        "That guy, he's a douche."
+title:        "ep003: That guy, he's a douche."
 date:         2019-02-06 22:00:00 -0500
 keywords:
 - family
