--- a/_posts/2019-01-27-ep001.md
+++ b/_posts/2019-01-27-ep001.md
@@ -1,5 +1,5 @@
 ---
-title:        "Our first episode!"
+title:        "ep001: Our first episode!"
 date:         2019-01-27 21:29:41 -0500
 keywords:
 - family
