--- a/_posts/2019-03-17-ep006.md
+++ b/_posts/2019-03-17-ep006.md
@@ -1,5 +1,5 @@
 ---
-title:        "ep006: Big Pimpin"
+title:        "ep006: Big Pimpin'"
 date:         2019-03-17 22:00:00 -0500
 keywords:
 - family
